# python-api-autotests

./: .gitignore  index.html  pyproject.toml  pytest.ini
.github/workflows/: python_api_autotests.yaml
1/: index.html
1/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: history.json
1/widgets/: categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
10/: index.html
10/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
10/widgets/: behaviors.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
11/: index.html
11/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
2/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: history.json
schemas/: auth_schemas.py  characters_schemas.py  error_schemas.py  users_schemas.py
services/: base_api.py
tests/: conftest.py
(+437 files in other folders)
