[project]
name = "python-api-autotests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.16.0",
    "email-validator>=2.3.0",
    "faker>=40.23.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-rerunfailures>=16.3",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]

[tool.black]
line-length = 88
